apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: default
  labels:
    app: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  # replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          ports:
            - name: webui
              containerPort: 8080
            - name: bt-tcp
              containerPort: 6881
            - name: bt-udp
              containerPort: 6881
              protocol: UDP
      volumes:
        - name: data
          hostPath:
            path: /home/ad/homelab/data
            type: Directory
        - name: config
          hostPath:
            path: /home/ad/homelab/config/qbittorrent
            type: Directory
      restartPolicy: Always
---
