apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: qbittorrent.h18s.lab
      http:
        paths:
          - {
              path: /,
              pathType: Prefix,
              backend:
                { service: { name: qbittorrent, port: { number: 8080 } } },
            }
